syntax = "proto3";

package com.wazuh.api.engine;

enum ReturnStatus
{
    UNKNOWN = 0;
    OK = 1; // Success
    ERROR = 2; // Generic error
}
